k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: image-editor
  labels:
    name: image-editor
    app: image-editor
